# RhythmTyper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  game.cpp  game.h  game.tcc  system.cpp  system.h  window.cpp  window.h
src/debug/: CMakeLists.txt  debug_system.cpp  debug_system.h
src/event/: CMakeLists.txt  event_handler.cpp  event_handler.h  event_system.cpp  event_system.h  event_system.tcc
src/graphic/: CMakeLists.txt  color.cpp  color.h  render_system.cpp  render_system.h  renderable.cpp  renderable.h  texture_wrapper.cpp  texture_wrapper.h  vertex.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h  scene_system.cpp  scene_system.h  scene_system.tcc
src/ui/: CMakeLists.txt  position.cpp  position.h  rect.h  space.cpp  space.h  space_utility.cpp  space_utility.h
tests/: CMakeLists.txt  event_tests.cpp  space_tests.cpp
